allow parsing with hledger

--- a/index.html
+++ b/index.html
@@ -190,7 +190,8 @@
           Ledger command : <input type="text" id="ledgerCommand" size="25">
           <input type="file" id="selectLedgerCommand" style="display: none;" />
           <input type="button" id="browseCommandButton" value="Browse..." />
-
+          <br>
+          Parse using hledger : <input type="checkbox" id="hLedger"></input>
 
         </div>
       </div>
