--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="vendor/jquery-treetable/3.2.0/css/jquery.treetable.css">
   <link rel="stylesheet" href="vendor/jquery-treetable/3.2.0/css/jquery.treetable.theme.default.css">
 
-  <title>Ledgerable</title>
+  <title>Ledgerble</title>
 </head>
 
 <!-- https://stackoverflow.com/questions/25098042/fill-remaining-vertical-space-with-css-using-displayflex/25098486-->
