--- a/index.html
+++ b/index.html
@@ -189,11 +189,7 @@
         <div class="tab-pane fade" id="options" role="tabpanel" aria-labelledby="options-tab"
           style="width: 100%; height: 100%;">
 
-          Ledger command : <input type="text" id="ledgerCommand" size="25">
-          <input type="file" id="selectLedgerCommand" style="display: none;" />
-          <input type="button" id="browseCommandButton" value="Browse..." />
-          <br>
-          Parse using hledger : <input type="checkbox" id="hLedger"></input>
+          <div id="settingsDiv"/>
 
         </div>
       </div>
