classify postings when parsing

--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
                 <th>Accounts</th>
                 <th>Payee</th>
                 <th>Amount</th>
+                <th>Type</th>
               </tr>
             </thead>
           </table>
